<resources>
    <string name="app_name">Sunningdale</string>

    <string name="text_hello_mhsystems">Hello Sunningdale!</string>

    <!-- START OF SNACK BAR MESSAGES -->
    <string name="error_no_internet">Please check your internet connection</string>
    <string name="error_server_problem">There was a problem connecting to the server. Please try again later.</string>
    <string name="error_no_connection">No Internet Connection</string>
    <string name="error_try_again">Try again later</string>
    <string name="error_no_competitions">No competitions</string>
    <string name="error_no_course">No Course</string>
    <string name="error_no_data_found">No Data Found</string>
    <string name="error_no_member">No Member found</string>
    <string name="error_select_different_month">Select different month</string>
    <string name="error_check_internet">Please check your internet connectivity and try again</string>
    <string name="error_no_data">No compResultData found</string>
    <string name="error_please_retry">Bad internet connection. please try again later.</string>
    <string name="message_no_date_selected">No date selected.</string>
    <string name="error_wrong_date_selection">You can only view compResultData of current date and future dates.</string>
    <!-- END OF SNACK BAR ERROR MESSAGES -->

    <!-- START OF COMMON MESSAGES THROUGH OUT THE APP -->
    <string name="text_join">Join</string>
    <string name="text_joined">Joined</string>
    <!-- END OF COMMON MESSAGES THROUGH OUT THE APP  -->

    <!-- START OF ALERT DIALOG OF APP -->
    <string name="alert_dialog_close">Close</string>

    <string name="text_alert_book_course">Book a tee time</string>
    <string name="text_alert_book_competitons">Book this competition</string>
    <string name="text_alert_competions_message">In order to book this competition or create event call us or email:</string>
    <string name="text_alert_course_message">In order to book a tee time or create event call us or email:</string>
    <!-- END OF ALERT DIALOG OF APP  -->

    <!-- START OF LOGIN ACTIVITY -->
    <string name="text_title_please_login">PLEASE LOGIN</string>
    <string name="text_email_hint">Username</string>
    <string name="text_password">Password</string>
    <string name="button_text_login">Login</string>
    <string name="text_title_forgot_password"><u>Forgot your password?</u></string>
    <string name="error_all_required">All fields are required.</string>
    <string name="text_title_copyright">© 2016 Gemini Media Network</string>
    <!-- END OF LOGIN ACTIVITY -->

    <!-- START OF DASHBOARD ACTIVITY -->
    <string name="title_golf_club_name">SUNNINGDALE GOLF CLUB</string>
    <string name="title_home_message">“Kindness is the language which the deaf can hear and the blind can see.”</string>
    <string name="title_home_message_author">Mark Twain</string>
    <!-- END OF DASHBOARD ACTIVITY -->

    <!-- START OF COURSE DIARY ACTIVITY -->
    <string name="title_course_diary">COURSE DIARY</string>
    <string name="title_event_title">Event Title</string>
    <!-- END OF COURSE DIARY ACTIVITY -->

    <!-- START OF COMPETITIONS EVENT ACTIVITY -->
    <string name="title_competitions">COMPETITIONS</string>
    <string name="title_competitions_prize">fee per player</string>
    <!-- END OF COMPETITIONS EVENT ACTIVITY -->

    <!-- START OF COMPETITIONS FRAGMENT -->
    <string name="tab_title_events">EVENTS</string>
    <string name="tab_title_current">CURRENT</string>
    <string name="tab_title_completed">COMPLETED</string>
    <string name="tab_title_upcoming">UPCOMING</string>
    <!-- END OF COMPETITIONS FRAGMENT -->

    <!-- START OF MEMBERS ACTIVITY -->
    <string name="text_title_members">Members</string>
    <string name="tab_title_memebers">MEMBERS</string>
    <string name="tab_title_friends">FRIENDS</string>
    <!-- END OF MEMBERS ACTIVITY -->

    <!-- START OF HANDICAP GRAPH FRAGMENT -->
    <string name="text_title_show_certificate">SHOW</string>
    <!-- END OF HANDICAP GRAPH FRAGMENT -->

    <!-- START OF MEMBERS DETAIL ACTIVITY -->
    <string name="text_member_since">Member since </string>
    <string name="text_member_no_email">Email not found.</string>
    <string name="text_member_no_address">Address not found.</string>
    <string name="alert_title_friend_invitation">Friend Invitation</string>
    <string name="alert_title_friend_invite_message">Do you wish to add this member to your Friend list?</string>
    <string name="alert_title_friend_remove">Remove Friend</string>
    <string name="alert_title_unjoin">Unjoin Competition</string>
    <string name="alert_title_unjoin_message">Are you sure you want to leave this competition?</string>
    <string name="alert_title_friend_remove_message">Do you wish to remove this member from your Friend list?</string>
    <!-- START OF MEMBERS DETAIL ACTIVITY -->

    <!-- START OF FINANCE FRAGMENT -->
    <string name="title_card_balance">CARD BALANCE</string>
    <string name="title_recent_transaction">RECENT TRANSACTIONS</string>
    <string name="title_current_invoice">CURRENT INVOICE</string>
    <string name="button_title_show_all">SHOW ALL</string>
    <!-- END OF FINANCE FRAGMENT -->

    <!-- START OF MY ACCOUNT ACTIVITY -->
    <string name="title_my_account">My Account</string>
    <string name="tab_title_your_details">Your Details</string>
    <string name="tab_title_handicap">Handicap</string>
    <string name="tab_title_finances">Finances</string>
    <!-- END OF MY ACCOUNT ACTIVITY -->

    <!-- START OF DETAIL INVOICE ACTIVITY -->
    <string name="title_text_invoice">INVOICE NUMBER</string>
    <string name="title_text_date">DATE</string>
    <string name="title_text_status">STATUS</string>
    <string name="title_text_description">DESCRIPTION</string>
    <string name="title_text_from">FROM</string>
    <string name="title_text_to">TO</string>
    <string name="title_text_value">VALUE</string>
    <string name="title_text_tax">TAX</string>
    <string name="title_text_total">TOTAL</string>
    <string name="title_text_remarks">REMARKS</string>
    <!-- END OF DETAIL INVOICE ACTIVITY -->


    <!-- START OF CLUB NEWS DETAIL ACTIVITY -->
    <string name="text_club_news_date">Thursday, 2nd June 2016</string>
    <string name="text_club_news_time">06:35AM</string>
<string name="text_club_news_detail">In Part Three, I promised we would get into the resources. Before we do, however, let’s discuss a treasure that most of us have been exposed to, but don’t take nearly enough time out of our day to focus on – the power of prayer. This may offend some people, but I hope it does not; as that is not my intent.

\n\nAs humans, we have progressed in so many ways, but we have lost touch with our bodies, nature, and the power of prayer. There seems to be a spiritual renaissance, of sorts, going on in the “new age” movement.

\n\nHowever, there are a large number of children growing up with no spiritual guidance at all. There are many reasons, and excuses, for this, but a large portion of this generation of children could grow up, out of touch, with their spiritual health.

\n\nAlways remember that “whole health” deals with mind, body, and spirit, as they are interconnected. If these three components are healthy, you are in good shape at any age.</string>
    <!-- END OF CLUB NEWS DETAIL ACTIVITY -->

    <!-- ACCOUNT/SETTINGS SCREEN -->
    <string name="text_title_settings">Settings</string>
    <string name="text_title_reset_pwd">Reset Password</string>
    <string name="edit_title_current_pwd">Current password</string>
    <string name="edit_title_new_pwd">New password</string>
    <string name="edit_title_confirm_pwd">New password confirm</string>
    <string name="button_reset_pwd">Reset password</string>
    <string name="error_incorrect_current_pwd">Incorrect current password</string>
    <string name="error_pwd_no_match">New passwords did not match</string>

    <!-- START OF YOUR DETAIL FRAGMENT -->

    <!-- HEADING TITLE -->
    <string name="title_text_personal_details">Personal Details</string>
    <string name="title_text_contact">Mobile</string>
    <string name="title_text_address">Address</string>
    <string name="title_text_uname_password">Username &amp; Password</string>

    <!-- OTHER FIELDS -->
    <string name="title_text_name">Name</string>
    <string name="title_text_membership_type">Membership type</string>

    <string name="title_text_phone_number">Phone no</string>
    <string name="title_text_mobile">Mobile</string>
    <string name="title_text_work">Work</string>
    <string name="title_text_email">Email</string>

    <string name="title_text_city">City</string>
    <string name="title_text_street">Street</string>
    <string name="title_text_postal_code">Postal Code</string>

    <string name="title_text_username">Username</string>
    <string name="title_text_password">Password</string>
    <!-- END OF YOUR DETAIL FRAGMENT -->

    <!-- NAVIGATION DRAWER ITEMS -->
    <string-array name="homeGridItems">

        <item>Your Handicap</item>
        <item>Course Diary</item>
        <item>Competitions</item>
        <item>Members</item>
        <item>Club News</item>
        <item>Your Account</item>

    </string-array>

    <!-- NAVIGATION DRAWER ICONS -->

    <string-array name="HomeGridIcons">

        <item>@mipmap/ic_handicap_chart</item>
        <item>@mipmap/ic_home_diary</item>
        <item>@mipmap/ic_home_competitions</item>
        <item>@mipmap/ic_home_members</item>
        <item>@mipmap/ic_home_clubnews</item>
        <item>@mipmap/ic_my_account</item>

    </string-array>

    <!-- GRID VIEW BACKGROUND COLORS -->

    <string-array name="gridBackgroundColors">

        <item>@drawable/background_pressed_f6b98c</item>
        <item>@drawable/background_pressed_afd9a1</item>
        <item>@drawable/background_pressed_f6ea8c</item>
        <item>@drawable/background_pressed_colora1b7e0</item>
        <item>@drawable/background_pressed_c0995b</item>
        <item>@drawable/background_pressed_b2e6d9</item>

    </string-array>
    <string name="title_activity_member_detail">MemberDetailActivity</string>

    <!-- ~~ NAVIGATION DRAWER ICONS ~~ -->

</resources>
