<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorF9F8F7">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!-- TOP BAR [TITLE] -->

        <android.support.v7.widget.Toolbar
            android:id="@+id/tbResetPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/color4B4B49"
            android:title="@string/text_title_reset_pwd"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginTop="25dp"
            android:orientation="vertical">

            <!-- CURRENT PASSWORD FIELD -->

            <EditText
                android:id="@+id/etCurrentPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edittext_shape_white"
                android:gravity="center"
                android:hint="@string/edit_title_current_pwd"
                android:imeOptions="actionNext"
                android:inputType="textPassword"
                android:maxLines="1"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@color/colorBlack000000"
                android:textColorHint="@color/colorD6D0C9"/>

            <!-- NEW PASSWORD FIELD -->

            <EditText
                android:id="@+id/etNewPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edittext_shape_white"
                android:gravity="center"
                android:hint="@string/edit_title_new_pwd"
                android:imeOptions="actionNext"
                android:inputType="textPassword"
                android:maxLines="1"
                android:padding="10dp"
                android:layout_marginTop="20dp"
                android:singleLine="true"
                android:textColor="@color/colorBlack000000"
                android:textColorHint="@color/colorD6D0C9"/>

            <!-- NEW PASSWORD FIELD -->

            <EditText
                android:id="@+id/etConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edittext_shape_white"
                android:gravity="center"
                android:hint="@string/edit_title_confirm_pwd"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:layout_marginTop="20dp"
                android:maxLines="1"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@color/colorBlack000000"
                android:textColorHint="@color/colorD6D0C9"/>

            <!-- LOGIN BUTTON-->
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/button_login_shape_c0995b">


                <ImageView
                    android:id="@+id/ivResetPassword"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:text="@string/button_reset_pwd"
                    android:src="@mipmap/ic_tick"
                    android:elevation="0dp"
                    android:textAllCaps="false"
                    android:padding="10dp"
                    android:textColor="@color/colorWhiteffffff"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/btResetPassword"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/button_login_shape_c0995b"
                    android:text="@string/button_reset_pwd"
                    android:elevation="0dp"
                    android:textAllCaps="false"
                    android:padding="10dp"
                    android:textColor="@color/colorWhiteffffff"
                    android:textSize="18sp" />

            </FrameLayout>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
